fixes, adjustments, race conditions